--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -29,7 +29,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active">
+        <li class="<%= is_page_selected("/") %>">
           <%= link_to "Home", "/index.html" %>
         </li>
         <li>
