--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8">
-
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,10 @@
     <%= partial "/partials/metatags" %>
     <%= partial "/partials/fonts" %>
     <%= stylesheet_link_tag "main" %>
-    
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
 
   <body class="<%= page_classes %>">
